<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/hex_settings" android:key="hexsettings">
	<PreferenceCategory android:title="Color">
		<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:title="Background Color" android:key="bg_color">

		</PreferenceScreen>
	</PreferenceCategory>

	<PreferenceCategory android:title="Background">
		<ListPreference android:entries="@array/bg_types"
			android:key="bg_type" android:summary="@string/bg_style"
			android:title="@string/bg_style" android:entryValues="@array/bg_types" />
	</PreferenceCategory>

	<PreferenceCategory android:title="Sprites">
		<ListPreference android:entries="@array/sprite_count"
			android:key="sprite_count" android:summary="@string/count_label"
			android:title="@string/count_title" android:entryValues="@array/sprite_count" />

		<ListPreference android:entryValues="@array/actions"
			android:entries="@array/actions" android:summary="@string/touch_desc"
			android:title="@string/touch_action" android:key="touch_actions" />
	</PreferenceCategory>
</PreferenceScreen>